# meshup

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  model.gltf  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: agents.md
buildscripts/: build-wasm.ts
devlibs/geo-buf/: Cargo.toml
examples/: basics.ts  curve.ts  house.ts  mesh.ts  sketch.ts  vector.ts
src/: Bbox.ts  Collection.ts  Color.ts  Container.ts  Curve.ts  GLTFBuilder.ts  GLTFExtensions.ts  Mesh.ts  MeshCollection.ts  OBbox.ts  Point.ts  Polygon.ts  SceneNode.ts  Selector.ts  Shape.ts  ShapeCollection.ts  Sketch.ts  Style.ts  Vector.ts  Vertex.ts  constants.ts  csgrs-js-binary.ts  index.ts  internal.ts  loader.ts  types.ts  utils.ts
src/wasm/: csgrs.d.ts  csgrs.js  csgrs_bg.js  csgrs_bg.wasm  csgrs_bg.wasm.d.ts  package.json
tests/examples/: alignments.test.ts  basics.test.ts  booleans.test.ts  curves.test.ts  house.test.ts  isometry.test.ts  offsets.test.ts  scene.test.ts  sketch.test.ts  specialops.test.ts  svg.test.ts
tests/unit/: BVH.test.ts  Bbox.test.ts  Collection.test.ts  Container.test.ts  Curve.test.ts  EdgeProjection.test.ts  GLTFBuilder.test.ts  Mesh.test.ts  Point.test.ts  Polygon.test.ts  SceneNode.test.ts  Selector.test.ts  Sketch.test.ts  Vector.test.ts  utils.test.ts
